added html, css

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,60 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>
+  Brilliant Careers
+</title>
+<style>
+  h1{
+    font-size:40px;
+    font-family:Roboto;
+    font-weight:Normal;
+    color:rgb(50,50,50);
+    text-align:center
+  }
+  h2{
+    font-size:32px;
+    font-family:Roboto;
+ margin0auto:Normal;
+    color:rgb(100,100,100);
+    text-align:center
+  }
+  .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+  p{
   
+    font-family:Roboto;
+    font-weight:Normal;
+    color:rgb(80,80,80);
+    text-align:center
+  }
+  #banner{
+   
+    height:36px
+    margin: 0 auto;
+  }
+  div{
+    max-width:720px;
+    margin: 0 auto;
+  }
+</style>
+</head>
+<body>
+  <div>
+  <h1>Brilliant Careers</h1>
+  <img class="center"src="https://i.ibb.co/P11bB5p/onlinetutor.jpg">
+  <h2>About Brilliant Careers</h2>
+  <p>We are seeking qualified and experienced online teachers to join our team. As an online teacher, you will be responsible for delivering high-quality online instruction to students in a virtual environment. The ideal candidate should have a bachelor's or master's degree in education or a related field, experience in online teaching, and excellent communication skills.
+</p>
+<h2>OPEN POSITIONS</h2>
+  <p>TODO-Later</p>
+  <div style="text-align:center">  
+  <button>Contact</button>
+  </div>
+  </div>
+</body>
 </html>
